@@ -1,5 +1,7 @@
 requires 'B';
+requires 'List::Util';
 requires 'experimental';
+
 on 'test' => sub {
     requires 'Test::More';
 };
